--- a/graphs.html
+++ b/graphs.html
@@ -91,7 +91,7 @@
                     <h1 id="building-graphs" class="page-header">Building Graphs</h1>
                     <p class="lead"><strong>DiagrammeR</strong> has a nice set of functions for building graphs. You can continually build the graph object, modify its attributes, get information from it, and render a graph diagram. </p>
                     <h2 id="the-graph-functions">The Graph Functions</h2>
-                    <p>A collection of graph functions is available for creating and manipulating graphs (specifically, graph objects). They allow you to generate node and edge data frames (collections of nodes or edges along with their attributes), perform scaling of attribute values with data values, draw information from the graph object, and much more.</p>
+                    <p>A collection of graph functions is available for creating and manipulating graphs (specifically, graph objects). They allow you to generate node and edge data frames (collections of nodes or edges along with their attributes), perform scaling of attribute values with data values, traverse the graph and obtain specific information from nodes and edges (and quite a bit more).</p>
                     <div>
                         <img src="img/graph-functions/graph_functions_1.png" class="img-responsive center-block">
                         <img src="img/graph-functions/graph_functions_2.png" class="img-responsive center-block">
