--- a/graphs.html
+++ b/graphs.html
@@ -129,6 +129,9 @@
                             <li><code>combine_edges</code> <em>Combine multiple edge data frames into a single edge data frame</em></li>
                     </ul>
                         <div>
+                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
                             <img src="img/graph-functions/create_nodes_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
