Add several images to 'graphs.html'

--- a/graphs.html
+++ b/graphs.html
@@ -332,6 +332,9 @@ all_edges
                             <li><code>render_graph</code> <em>Render the graph or output in various formats</em></li>
                     </ul>
                         <div>
+                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
                             <img src="img/graph-functions/create_graph_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
@@ -664,6 +667,9 @@ create_graph(nodes_df = nodes,
                             <li><code>is_graph_directed</code> <em>Is the graph a directed graph?</em></li>
                     </ul>
                         <div>
+                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
                             <img src="img/graph-functions/node_info_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
@@ -991,6 +997,9 @@ node_count(graph, type = FALSE)
                             <li><code>edge_rel</code> <em>Create, read, update, delete, or report status of an edge relationship</em></li>
                     </ul>
                         <div>
+                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
                             <img src="img/graph-functions/add_node_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
@@ -1121,6 +1130,9 @@ edge_info(graph)
                             <li><code>render_graph_from_series</code> <em>Render a graph available in a series</em></li>
                             <li><code>series_info</code> <em>Get detailed information on a graph series</em></li>
                     </ul>
+                        <div>
+                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
+                        </div>
                         <div>
                             <img src="img/graph-functions/create_series_2x.png" class="img-responsive center-block">
                         </div>
