--- a/graphs.html
+++ b/graphs.html
@@ -596,7 +596,7 @@ render_graph(graph)</code></pre>
 ###
 
 library(DiagrammeR)
-library(pipeR)
+library(magrittr)
 
 # Create a node data frame
 nodes &lt;-
@@ -1189,7 +1189,7 @@ edge_info(graph)
 #####
 
 library(DiagrammeR)
-library(pipeR)
+library(magrittr)
 
 # Create three different graphs
 graph_1 &lt;- create_graph() %>%
