--- a/graphs.html
+++ b/graphs.html
@@ -326,9 +326,12 @@ all_edges
                         </div>
                     </div>
                     <h2 id="create-render-graph">Create and Render Graph</h2>
-                    <p>Eventually, you'll want to make a graph and then see that graph. There are 2 functions that make graph creation and viewing possible:</p>
+                    <p>Eventually, you'll want to make a graph and then see that graph. There are several functions that make graph creation and viewing possible:</p>
                     <ul>
                             <li><code>create_graph()</code> <em>Create a graph object using data frames representative of nodes and edges</em></li>
+                            <li><code>create_random_graph()</code> <em>Create a randomized graph</em></li>
+                            <li><code>combine_graphs()</code> <em>Combine two graphs into a single graph</em></li>
+                            <li><code>import_graph()</code> <em>Import a graph from various graph formats</em></li>
                             <li><code>render_graph()</code> <em>Render the graph or output in various formats</em></li>
                     </ul>
                         <div>
@@ -336,6 +339,24 @@ all_edges
                         </div>
                         <div>
                             <img src="img/graph-functions/create_graph_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
+                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
+                            <img src="img/graph-functions/create_random_graph_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
+                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
+                            <img src="img/graph-functions/combine_graphs_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
+                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
+                            <img src="img/graph-functions/import_graph_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
