--- a/docs.html
+++ b/docs.html
@@ -61,10 +61,7 @@
                       <a href="io.html">I/O</a>
                     </li>
                     <li>
-                      <a href="graphviz.html">Graphviz</a>
-                    </li>
-                    <li>
-                      <a href="mermaid.html">Mermaid</a>
+                      <a href="graphviz_and_mermaid.html">Graphviz/Mermaid</a>
                     </li>
                     <li>
                       <a href="graphs.html">Building Graphs</a>
