--- a/docs.html
+++ b/docs.html
@@ -55,7 +55,7 @@
             <nav class="collapse navbar-collapse bs-navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active">
-                      <a href="docs.html">Getting started</a>
+                      <a href="docs.html">Start</a>
                     </li>
                     <li>
                       <a href="io.html">I/O</a>
