Modify link text

--- a/ndfs_edfs.html
+++ b/ndfs_edfs.html
@@ -64,7 +64,7 @@
                       <a href="graphviz_and_mermaid.html">Graphviz/Mermaid</a>
                     </li>
                     <li>
-                      <a href="graphs.html">Building Graphs</a>
+                      <a href="graphs.html">Graph Functions</a>
                     </li>
                     <li class="active">
                       <a href="ndfs_edfs.html">ndfs/edfs</a>
