--- a/graphs.html
+++ b/graphs.html
@@ -64,7 +64,7 @@
                       <a href="graphviz_and_mermaid.html">Graphviz/Mermaid</a>
                     </li>
                     <li class="active">
-                      <a href="graphs.html">Building Graphs</a>
+                      <a href="graphs.html">Graph Functions</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
