Add link to top navbar

--- a/ndfs_edfs.html
+++ b/ndfs_edfs.html
@@ -69,6 +69,9 @@
                     <li class="active">
                       <a href="ndfs_edfs.html">NDFs/EDFs</a>
                     </li>
+                    <li>
+                      <a href="graph_creation.html">Graph Creation</a>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="http://github.com/rich-iannone/DiagrammeR">GitHub</a></li>
