--- a/graph_creation.html
+++ b/graph_creation.html
@@ -401,7 +401,7 @@ library(DiagrammeR)
                         </div>
                     </div>
                     <h2 id="import_graph">The `import_graph` function</h2>
-                    <p>With the <code>import_graph()</code> function, ... </p>
+                    <p>The <code>import_graph()</code> function is all about loading in graphs from files. There are numerous graph file formats and while <strong>DiagrammeR</strong> does not support too many of them at this point, those formats that are supported are amongst the most well-used. (Support for other file formats is forthcoming.) Thus far, <code>import_graph()</code> will import GraphML (.graphml), GML (.gml), and SIF (.sif) graph files. As with the <code>create_graph()</code> function, <code>import_graph()</code> allows for provision of a name and a date-time for the newly imported graph.</p>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
