Add link to top navbar

--- a/selections.html
+++ b/selections.html
@@ -75,6 +75,9 @@
                     <li class="active">
                       <a href="selections.html">Selections</a>
                     </li>
+                    <li>
+                      <a href="traversals.html">Traversals</a>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="http://github.com/rich-iannone/DiagrammeR">GitHub</a></li>
