Add link to top navbar

--- a/graph_creation.html
+++ b/graph_creation.html
@@ -78,6 +78,9 @@
                     <li>
                       <a href="traversals.html">Traversals</a>
                     </li>
+                    <li>
+                      <a href="inspection.html">Inspection</a>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="http://github.com/rich-iannone/DiagrammeR">GitHub</a></li>
